# kpilot

./: README.md  pyproject.toml
kpilot/: config.py  main.py
kpilot/agent/: loop.py
kpilot/kube/: client.py
kpilot/ui/: app.py  chat_panel.py  command_log.py  header.py  resource_panel.py  theme.py
