[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kpilot"
version = "0.1.0"
description = "Kubernetes TUI with Claude AI Copilot"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "claude-code-sdk>=0.0.20",
    "kubernetes>=28.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kpilot"]

[project.scripts]
kpilot = "kpilot.main:main"
